# pws-herring-basa

./: .Rhistory  .gitignore  README.md  basa_report.Rmd  basa_report.tex  run_basa.r  run_basa_tmb.r  run_profile.R  run_retrospectives.R
cost-of-info/: .gitignore  calculate-IP-coefficients.r  run_basa_coi.r
data_outputs/: numbers-at-age.csv  outputs-for-management.csv  predicted-age-comps.csv  predicted-survey-values.csv
docs/: CLR_changes.md  assumptions.md  changelog.md  todo.md  (+6 more)
sensitivity/: .gitignore  README.md  pyproject.toml  run-model.md  run_basa.r  user-stories.md
sensitivity/data_outputs/: outputs-for-management.csv  outputs-for-management_base.csv
sensitivity/doc/: TODO.md  design.md  design.mmd  run_model.md
sensitivity/model/: PWS_ASA(ESS).ctl  PWS_ASA(ESS_estimate).ctl  PWS_ASA(covariate).ctl  adaptation.csv  init.pin
sensitivity/modify_mortality/: modify_mortality.ipynb  output.csv
sensitivity/old_scripts/modify_mortality/: modify_mortality.ipynb  modify_mortality.py
sensitivity/plotting/: plot_age_compositions.R  plot_management_outputs.R  plot_survey_fits.R
sensitivity/read_biomass/: read_biomass.py
sensitivity/sensitivity-app/: README.md  app.py
sensitivity/src/sensitivity/: __init__.py  modify_mortality.py  plot_sensitivity.py  plot_sensitivity_comparison.py  read_biomass.py  run_basa.py  sensitivity_comparison.py
sensitivity/src/sensitivity.egg-info/: PKG-INFO  SOURCES.txt
sensitivity/tests/: test.ipynb  test_modify_mortality.py  test_plot_sensitivity.py  test_plot_sensitivity_comparison.py  test_sensitivity_comparison.py
(+428 files in other folders)
